--- a/docs-dev/webapp/index.html
+++ b/docs-dev/webapp/index.html
@@ -7,6 +7,7 @@
 	<script id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
 			data-sap-ui-theme="sap_fiori_3"
+			data-sap-ui-bindingSyntax="complex"
 			data-sap-ui-resourceroots='{"capcom.recap": "./"}'
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-async="true">
