chore: move for dev

--- a/docs-dev/webapp/index.html
+++ b/docs-dev/webapp/index.html
@@ -3,19 +3,28 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>re>≡CAP 2020</title>
+	<title>re>≡CAP 2022</title>
+	<link rel="stylesheet" href="css.css">
 	<script id="sap-ui-bootstrap"
-			src="resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_fiori_3"
-			data-sap-ui-bindingSyntax="complex"
+			src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+			data-sap-ui-theme="sap_fiori_3_dark"
+			data-sap-ui-libs="sap.ui.core,sap.m"
 			data-sap-ui-resourceroots='{"capcom.recap": "./"}'
-			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
+			data-sap-ui-bindingSyntax="complex"
 			data-sap-ui-async="true">
 			</script>
+	<script>
+		sap.ui.getCore().attachInit(() => {
+			sap.ui.require(["sap/ui/core/mvc/XMLView"], async (XMLView) => {
+				const View = await XMLView.create({ viewName: "capcom.recap.App" })
+				View.placeAt("content")
+			})
+		})
+	</script>
 </head>
 
-<body class="sapUiBody" id="content">
-	<div data-sap-ui-component data-name="capcom.recap" data-id="container" data-settings='{"id" : "recap"}'></div>
+<body id="content">
+
 </body>
 
 </html>
