--- a/docs-dev/webapp/index.html
+++ b/docs-dev/webapp/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>re>≡CAP 2023</title>
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="css.css?recap2023">
 	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 	<script id="sap-ui-bootstrap"
 					src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
