wip: dynamic agenda

--- a/docs-dev/webapp/index.html
+++ b/docs-dev/webapp/index.html
@@ -7,9 +7,9 @@
 	<link rel="stylesheet" href="css.css?recap2023-1">
 	<link rel="icon" type="image/svg+xml" href="favicon.svg" />
 	<script id="sap-ui-bootstrap"
-					src="https://openui5.hana.ondemand.com/resources/sap-ui-core.js"
+					src="https://ui5.sap.com/resources/sap-ui-core.js"
 					data-sap-ui-theme="sap_fiori_3_dark"
-					data-sap-ui-libs="sap.ui.core,sap.m"
+					data-sap-ui-libs="sap.ui.core,sap.m,sap.ui.webc.fiori,sap.ui.webc.main,sap.ui.unified,sap.suite.ui.commons"
 					data-sap-ui-resourceroots='{"recap": "./"}'
 					data-sap-ui-bindingSyntax="complex"
 					data-sap-ui-async="true">
