fix: dates, rm special char

--- a/static/index.html
+++ b/static/index.html
@@ -12,12 +12,12 @@
 
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:url" content="https://recap-conf.dev/" />
-  <meta property="twitter:title" content="reCAP Conference - June 4, 2024" />
+  <meta property="twitter:title" content="reCAP (un)conference - June 4, 2024" />
   <meta property="twitter:description"
-    content="reCAP: the (un)conference on the SAP Cloud Application Programming Model (CAP)” establishing the link between the CAP community and the CAP development team. It was initiated by our great CAP community and quickly grew to a global onsite and broadcasting event." />
+    content="re>≡CAP: the (un)conference on the SAP Cloud Application Programming Model (CAP)” establishing the link between the CAP community and the CAP development team. It was initiated by our great CAP community and quickly grew to a global onsite and broadcasting event." />
   <meta property="twitter:image" content="https://recap-conf.dev/images/share-recap.png" />
 
-  <meta property="og:title" content="reCAP Conference - June 4, 2024" />
+  <meta property="og:title" content="reCAP (un)conference - June 4, 2024" />
   <meta property="og:description"
     content="reCAP: the (un)conference on the SAP Cloud Application Programming Model (CAP)” establishing the link between the CAP community and the CAP development team. It was initiated by our great CAP community and quickly grew to a global onsite and broadcasting event." />
   <meta property="og:image" content="https://recap-conf.dev/images/share-recap.png" />
@@ -41,7 +41,7 @@
       <div class="recap-container">
         <img class="recap-logo" src="./images/recap_logo.svg" alt="logo of recap conference"/>
         <p>
-          Join the awesome developer conference all around the SAP Cloud Application Programming Model (CAP). The time of the year where our vivid communities, customers, and partners meet the CAP Product Team and exchange best practices, technical concepts, current projects, ideas for the future, and way more… <b>the call for speakers</b> is now open and we want YOU to be part of it.
+          Join the awesome developer conference all around the SAP Cloud Application Programming Model (CAP). The time of the year where our vivid communities, customers, and partners meet the CAP Product Team and exchange best practices, technical concepts, current projects, ideas for the future, and way more… <b>the call for speakers</b> is now open and we want YOU to be part of it.
         </p>
 
         <a href="https://recap.cfapps.eu12.hana.ondemand.com/" hreflang="en" rel="external nofollow" class="recap-btn">
@@ -68,25 +68,25 @@
             <h2>Save the date</h2>
               <ul>
                 <li>
-                  <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20240606%2F20240607&details=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&text=reCAP%202024%20Conference">
+                  <a href="https://calendar.google.com/calendar/render?action=TEMPLATE&dates=20240604%2F20240605&details=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&text=reCAP%202024%20Conference">
                     <img src="images/calendar/google.png" alt="Google calendar icon" aria-hidden="true" />
                     Google
                   </a>
                 </li>
                 <li>
-                  <a href="https://outlook.office.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-07T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-06T11%3A15%3A00&subject=reCAP%202024%20Conference">
+                  <a href="https://outlook.office.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-05T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-04T11%3A15%3A00&subject=reCAP%202024%20Conference">
                     <img src="images/calendar/office.png" alt="Office 365 calendar icon" aria-hidden="true" />
                     Office 365
                   </a>
                 </li>
                 <li>
-                  <a href="https://outlook.live.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-07T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-06T11%3A15%3A00&subject=reCAP%202024%20Conference" download='recap2024.ics'>
+                  <a href="https://outlook.live.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-05T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-04T11%3A15%3A00&subject=reCAP%202024%20Conference" download='recap2024.ics'>
                     <img src="images/calendar/outlook.png" alt="Outlook calendar icon" aria-hidden="true"/>
                     Outlook
                   </a>
                 </li>
                 <li>
-                  <a href="https://outlook.live.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-07T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-06T11%3A15%3A00&subject=reCAP%202024%20Conference" download='recap2024.ics'>
+                  <a href="https://outlook.live.com/calendar/0/action/compose?allday=true&body=Join%20the%20awesome%20developer%20conference%20all%20around%20the%20SAP%20Cloud%20Application%20Programming%20Model%20%28CAP%29.%20The%20time%20of%20the%20year%20where%20our%20vivid%20communities%2C%20customers%2C%20and%20partners%20meet%20the%20CAP%20Product%20Team%20and%20exchange%20best%20practices%2C%20technical%20concepts%2C%20current%20projects%2C%20ideas%20for%20the%20future%2C%20and%20way%20more%E2%80%A6&enddt=2024-06-05T11%3A15%3A00&location=SAP%20SE%20%28ROT03%29%2C%20SAP-Allee%2027%2C%2068789%20Sankt%20Leon-Rot%2C%20Germany&path=%2Fcalendar%2Faction%2Fcompose&rru=addevent&startdt=2024-06-04T11%3A15%3A00&subject=reCAP%202024%20Conference" download='recap2024.ics'>
                     <img src="images/calendar/ical.png" alt="iCal calendar icon" aria-hidden="true"/>
                     iCal
                   </a>
